[gd_scene load_steps=2 format=2]

[ext_resource path="res://Lobby.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 300
custom_constants/margin_top = 100
custom_constants/margin_left = 300
custom_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 300.0
margin_top = 100.0
margin_right = 1066.0
margin_bottom = 668.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 177.0
margin_right = 766.0
margin_bottom = 191.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "LOBBY"
align = 1
valign = 1
clip_text = true

[node name="IP" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 201.0
margin_right = 766.0
margin_bottom = 225.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/IP"]
margin_top = 5.0
margin_right = 60.0
margin_bottom = 19.0
text = "HOST IP: "

[node name="IP" type="LineEdit" parent="MarginContainer/VBoxContainer/IP"]
unique_name_in_owner = true
margin_left = 64.0
margin_right = 766.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "127.0.0.1:5000"

[node name="Name" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 235.0
margin_right = 766.0
margin_bottom = 259.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Name"]
margin_top = 5.0
margin_right = 62.0
margin_bottom = 19.0
text = "Name:     "

[node name="Name" type="LineEdit" parent="MarginContainer/VBoxContainer/Name"]
unique_name_in_owner = true
margin_left = 66.0
margin_right = 766.0
margin_bottom = 24.0
size_flags_horizontal = 3
placeholder_text = "Your name here"

[node name="RouteName" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 269.0
margin_right = 766.0
margin_bottom = 289.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/RouteName"]
margin_top = 3.0
margin_right = 61.0
margin_bottom = 17.0
text = "Route:     "

[node name="RouteName" type="OptionButton" parent="MarginContainer/VBoxContainer/RouteName"]
unique_name_in_owner = true
margin_left = 65.0
margin_right = 766.0
margin_bottom = 20.0
hint_tooltip = "Not used if joined in Servers, only support for Host"
size_flags_horizontal = 3
text = "No route selected"
items = [ "No route selected", null, false, 0, null ]
selected = 0

[node name="StationName" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 299.0
margin_right = 766.0
margin_bottom = 319.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/StationName"]
margin_top = 3.0
margin_right = 64.0
margin_bottom = 17.0
text = "Station:    "

[node name="StationName" type="OptionButton" parent="MarginContainer/VBoxContainer/StationName"]
unique_name_in_owner = true
margin_left = 68.0
margin_right = 766.0
margin_bottom = 20.0
hint_tooltip = "Not used if joined in Servers, only support for Host"
size_flags_horizontal = 3
disabled = true
text = "Random"
items = [ "Random", null, false, 0, null ]
selected = 0

[node name="PreferredDirection" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 329.0
margin_right = 766.0
margin_bottom = 360.0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/PreferredDirection"]
margin_right = 63.0
margin_bottom = 31.0
text = "Preferred 
Direction "
align = 1
valign = 1

[node name="PreferredDirection" type="OptionButton" parent="MarginContainer/VBoxContainer/PreferredDirection"]
unique_name_in_owner = true
margin_left = 67.0
margin_right = 766.0
margin_bottom = 31.0
hint_tooltip = "Not used if joined in Servers, only support for Host"
size_flags_horizontal = 3
disabled = true
text = "Random"
items = [ "Random", null, false, 0, null ]
selected = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 370.0
margin_right = 766.0
margin_bottom = 390.0
size_flags_horizontal = 3
custom_constants/separation = 100

[node name="Host" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 333.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "HOST"

[node name="Join" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 433.0
margin_right = 766.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
text = "JOIN"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/RouteName/RouteName" to="." method="_on_RouteName_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/StationName/StationName" to="." method="_on_StationName_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Host" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/Join" to="." method="_on_Button2_pressed"]
